headline line height on mobile fixed

--- a/style.css
+++ b/style.css
@@ -107,10 +107,13 @@
     line-height: 50px;
   }
 
-  .hero h1,
-  .about-section h1 {
+  .hero h1 {
     font-size: 45px;
     line-height: 85px;
+  }
+
+  .about-section h1 {
+    font-size: 45px;
   }
 
   .hero h2 {
